--- a/bootstrap-command-control-plane.yaml
+++ b/bootstrap-command-control-plane.yaml
@@ -1,7 +1,7 @@
 apiVersion: eksctl.io/v1alpha5
 kind: ClusterConfig
 metadata:
-  name: k8s-eks-inside-vpc
+  name: k8s-eks-in-this-vpc
   region: us-west-1
 managedNodeGroups:
   - name: mng-vpc-k8s-eks-control
