--- a/bootstrap-command-worker.yaml
+++ b/bootstrap-command-worker.yaml
@@ -48,6 +48,13 @@ managedNodeGroups:
         externalDNS: true
         certManager: true
 vpc:
+  subnets:
+    private:
+      us-west-1b: { id: subnet-09afd15fa0221d767 }
+      us-west-1a: { id: subnet-0953d0985742e9aab }
+    public:
+      us-west-1a: { id: subnet-0bf7a9af06953a6d0 }
+      us-west-1b: { id: subnet-065297ce07d91fcc5 }
   clusterEndpoints:
     publicAccess:  true
     privateAccess: true
