--- a/bootstrap-command-control-plane.yaml
+++ b/bootstrap-command-control-plane.yaml
@@ -18,7 +18,7 @@ managedNodeGroups:
     volumeIOPS: 3000
     volumeThroughput: 125
     disableIMDSv1: true
-    privateNetworking: true
+    #privateNetworking: true
     volumeEncrypted: false
     updateConfig:
       maxUnavailable: 1 # or `maxUnavailablePercentage: 75` to specify maxUnavailable as a percentage of total nodes
@@ -45,13 +45,13 @@ managedNodeGroups:
         certManager: true
 vpc:
   subnets:
-    private:
-      us-west-1b: { id: subnet-09afd15fa0221d767 }
-      us-west-1a: { id: subnet-0953d0985742e9aab }
+    #private:
+    #  us-west-1b: { id: subnet-09afd15fa0221d767 }
+    #  us-west-1a: { id: subnet-0953d0985742e9aab }
     public:
       us-west-1a: { id: subnet-0bf7a9af06953a6d0 }
       us-west-1b: { id: subnet-065297ce07d91fcc5 }
   clusterEndpoints:
     publicAccess:  true
-    privateAccess: true
+    #privateAccess: true
   securityGroup: "sg-039b1211845819902"
