--- a/bootstrap-command-worker.yaml
+++ b/bootstrap-command-worker.yaml
@@ -35,7 +35,7 @@ managedNodeGroups:
     #  effect: NoExecute
     tags:
       nodegroup-role: worker
-      node-role.kubernetes.io/mng-vpc-k8s-eks-control: true
+      node-role.kubernetes.io/mng-vpc-k8s-eks-control: "true"
     iam:
       attachPolicyARNs:
         # EKS worker nodes require the following two policies at least
@@ -49,9 +49,9 @@ managedNodeGroups:
         certManager: true
 vpc:
   subnets:
-    private:
-      us-west-1b: { id: subnet-09afd15fa0221d767 }
-      us-west-1a: { id: subnet-0953d0985742e9aab }
+    #private:
+    #  us-west-1b: { id: subnet-09afd15fa0221d767 }
+    #  us-west-1a: { id: subnet-0953d0985742e9aab }
     public:
       us-west-1a: { id: subnet-0bf7a9af06953a6d0 }
       us-west-1b: { id: subnet-065297ce07d91fcc5 }
