--- a/python-projects/django-todo-react/requirements.txt
+++ b/python-projects/django-todo-react/requirements.txt
@@ -2,6 +2,7 @@ aniso8601==7.0.0
 asgiref==3.5.2
 Django==4.0.6
 django-cors-headers==3.13.0
+django-filter==22.1
 djangorestframework==3.13.1
 djongo==1.3.6
 dnspython==2.2.1
