--- a/python-projects/django-todo-react/backend/requirements.txt
+++ b/python-projects/django-todo-react/backend/requirements.txt
@@ -19,7 +19,7 @@ PyJWT==1.7.1
 pykerberos==1.2.4
 pymongo==3.12.1
 pysqlite3==0.4.7
-pysqlite3-binary==0.4.6
+#pysqlite3-binary==0.4.6
 python-snappy==0.6.1
 pytz==2022.1
 Rx==1.6.1
