--- a/python-projects/django-todo-react/backend/docker-compose.yml
+++ b/python-projects/django-todo-react/backend/docker-compose.yml
@@ -34,8 +34,9 @@ services:
       DJANGO_SUPERUSER_EMAIL: issamoutassourt@gmail.com
       DEBUG: 1
     command: >
-     sh -c "python3 -u manage.py migrate &&
-            python3 -u manage.py createsuperuser --noinput &&
+     sh -c "python3 -m pip install -r requirements.txt &&
+            python3 -u manage.py migrate &&
+            python3 -u manage.py createsuperuser --noinput || true &&
             python3 -u manage.py runserver 0.0.0.0:8000"
     ports:
      - "8000:8000"
