--- a/python-projects/django-todo-react/frontend/package.json
+++ b/python-projects/django-todo-react/frontend/package.json
@@ -4,12 +4,14 @@
   "private": true,
   "proxy": "http://localhost:8000",
   "dependencies": {
+    "@apollo/client": "^3.6.9",
     "@popperjs/core": "^2.11.5",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
+    "graphql": "^16.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
